--- a/package.json
+++ b/package.json
@@ -10,13 +10,11 @@
     "@vicons/antd": "^0.10.0",
     "@vicons/ionicons5": "^0.10.0",
     "axios": "^0.26.1",
-    "element-resize-detector": "^1.2.4",
     "naive-ui": "^2.29.0",
     "pinia": "^2.0.9",
     "sass": "^1.49.9",
     "vue": "^3.2.25",
-    "vue-router": "4.0.11",
-    "vuedraggable": "^4.1.0"
+    "vue-router": "4.0.11"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.0.0",
